# parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: encoder_metadata.json  test_data.csv  tokenizer_metadata.json  validation_data.csv
parser/: create_dataset.py  create_model.py  numbers_model.py  simpe_predict.py  train_model.py
parser/data/: encoder_metadata.json  tokenizer_metadata.json  training_data.csv
tests/tests_unit/: test_create_dataset.py
