[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Lynochka <lina.astrakova@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
tensorflow = "^2.3.0"
inflect = "^4.1.0"
tensorflow-datasets = "^3.2.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.1.3"
pytest = "^6.0.1"
black = "^20.8b1"
isort = "^5.5.1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
